--- a/mysqld.cnf
+++ b/mysqld.cnf
@@ -76,3 +76,23 @@ log_error = /var/log/mysql/error.log
 max_binlog_size   = 100M
 # binlog_do_db		= include_database_name
 # binlog_ignore_db	= include_database_name
+
+
+slow_query_log         = 0
+slow_query_log_file    = /var/log/mysql/mysql-slow.log
+long_query_time        = 0
+log-queries-not-using-indexes
+
+skip-name-resolve=ON
+skip-log-bin
+
+innodb_buffer_pool_size = 1G
+#innodb_redo_log_capacity = 128M
+#innodb_buffer_pool_instances=2
+innodb_flush_log_at_trx_commit=2
+#innodb_flush_method = O_DIRECT
+innodb_autoinc_lock_mode = 2
+
+performance_schema=OFF
+
+innodb_doublewrite=0
