--- a/isupipe.conf
+++ b/isupipe.conf
@@ -1,15 +1,3 @@
-upstream app {
-    #server isu1:7000 weight=10;
-    server isu3:8080 weight=10;
-    #server isu2:7000 weight=3;
-    keepalive 128;
-}
-
-upstream self {
-   server isu1:8080;
-   keepalive 128;
-}
-
 server {
   listen 80 default_server;
   server_name _;
@@ -53,11 +41,8 @@ server {
   location / {
     try_files $uri /index.html;
   }
-
   location /api {
     proxy_set_header Host $host;
-    proxy_pass http://self;
-    proxy_http_version 1.1;
-    proxy_set_header Connection "";
+    proxy_pass http://localhost:8080;
   }
 }
