--- a/pdns.conf
+++ b/pdns.conf
@@ -7,7 +7,7 @@ gmysql-port=3306
 gmysql-user=isudns
 gmysql-dbname=isudns
 gmysql-password=isudns
-gmysql-host=192.168.0.12
+gmysql-host=isu3
 local-port=53
 security-poll-suffix=
 setgid=pdns
