--- a/isupipe.conf
+++ b/isupipe.conf
@@ -1,7 +1,7 @@
 upstream app {
-    #server isu1:7000 weight=10;
-    server isu3:8080 weight=10;
-    #server isu2:7000 weight=3;
+    server isu1:8080 weight=10;
+    #server isu3:8080 weight=8;
+    #server isu2:8080 weight=3;
     keepalive 128;
 }
 
@@ -54,10 +54,14 @@ server {
     try_files $uri /index.html;
   }
 
-  location /api {
-    proxy_set_header Host $host;
+  location /api/initialize {
     proxy_pass http://self;
     proxy_http_version 1.1;
     proxy_set_header Connection "";
+  }
+  location /api {
+    proxy_set_header Host $host;
+    proxy_pass http://app;
+    proxy_http_version 1.1;
   }
 }
