--- a/ssh-tunnel-manager.conf
+++ b/ssh-tunnel-manager.conf
@@ -17,6 +17,7 @@
 #
 TUNNEL_NAMES=(
     "mysql (isu2)"
+    "mysql (isu3)"
     "web (isu1)"
     "pprof (isu1)"
 )
@@ -28,6 +29,7 @@ TUNNEL_NAMES=(
 #
 TUNNELS=(
     "-L localhost:3306:localhost:3306 isu2"
+    "-L localhost:3307:localhost:3306 isu3" 
     "-L localhost:8443:localhost:443 isu1"
     "-L localhost:8081:localhost:8081 isu1"
 )
