--- a/isupipe.conf
+++ b/isupipe.conf
@@ -59,6 +59,11 @@ server {
     proxy_http_version 1.1;
     proxy_set_header Connection "";
   }
+  location /api/register {
+    proxy_pass http://self;
+    proxy_http_version 1.1;
+    proxy_set_header Connection "";
+  }
   location /api {
     proxy_set_header Host $host;
     proxy_pass http://app;
