--- a/isupipe.conf
+++ b/isupipe.conf
@@ -1,6 +1,6 @@
 upstream app {
     server isu1:8080 weight=10;
-    #server isu3:8080 weight=8;
+    server isu3:8080 weight=11;
     #server isu2:8080 weight=3;
     keepalive 128;
 }
